log
Thu 16 May 2024 09:23:07 PM UTC: 
 sudoku.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|5
total_score: 0/70
9bbf5ff
Thu 16 May 2024 09:36:11 PM UTC: 
 sudoku.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  0|5
total_score: 0/70
87b867f
Thu 16 May 2024 09:37:02 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
8fd2204
Thu 16 May 2024 09:49:16 PM UTC: 
 sudoku.c | 17 ++++++++++++++---
 1 file changed, 14 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
7dd2dfa
Thu 16 May 2024 10:13:57 PM UTC: 
 sudoku.c | 90 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++--------
 1 file changed, 80 insertions(+), 10 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘comprobar_submatrices’:
sudoku.c:115:15: error: unused variable ‘j’ [-Werror=unused-variable]
  115 |           int j =3*(k%3) + (p%3) ;
      |               ^
sudoku.c:114:15: error: unused variable ‘i’ [-Werror=unused-variable]
  114 |           int i =3*(k/3) + (p/3) ;
      |               ^
cc1: all warnings being treated as errors
Compilation failed
f2a5835
Thu 16 May 2024 10:14:21 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
197eb04
Fri 17 May 2024 02:05:41 AM UTC: 
 sudoku.c | 17 +++++++++++++----
 1 file changed, 13 insertions(+), 4 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘comprobar_submatrices’:
sudoku.c:118:33: error: expected statement before ‘)’ token
  118 |          if (n->sudo[i][j] != 0))
      |                                 ^
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
12d1c7c
